--- a/public/index.html
+++ b/public/index.html
@@ -55,16 +55,18 @@
             <h2>Register</h2>
             <form id="formRegister">
                 <fieldset>
+                    <label for="register_name">Your Name</label>
                     <input placeholder="You Name" id="register_name"
-                            required>
-                    <input placeholder="Your email" id="register_email" 
-                            required type="email">
-                    
-                    <label>Your Password</label>
-                    <input type="password" id="register_password"
-                            required>
-                </fieldset>
+                            required autocomplete="name">
 
+                    <label for="register_email">Your Email</label>
+                    <input placeholder="Your email" id="register_email" 
+                            required type="email" autocomplete="username">
+                    
+                    <label for="register_password">Your Password</label>
+                    <input type="password" id="register_password"
+                            required autocomplete="new-password">
+                </fieldset>
                 <button>Register Account</button>
             </form>
         </section>
@@ -74,11 +76,11 @@
 
             <form id="formLogin">
                 <fieldset>
+                    <label for="login_email"></label>
                     <input placeholder="email" id="login_email"
-                        required>      
+                        required autocomplete="username">      
                     <label for="login_password">Password</label>
-                    <input type="password" id="login_password"
-                       >
+                    <input type="password" id="login_password" autocomplete="current-password">
                 </fieldset>
                 <button>Continue</button>
 
