--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <link rel="icon" href="images/icons/icon.png">
 
     <script src="scripts/app.js" type="module"></script>
+    <script src="https://unpkg.com/@simplewebauthn/browser/dist/bundle/index.umd.min.js"></script>
 
 </head>
 
@@ -76,11 +77,18 @@
 
             <form id="formLogin" onsubmit="Auth.login(event)">
                 <fieldset>
+
                     <label for="login_email"></label>
                     <input placeholder="email" id="login_email"
-                        required autocomplete="username">      
-                    <label for="login_password">Password</label>
-                    <input type="password" id="login_password" autocomplete="current-password">
+                        required autocomplete="username"> 
+                        
+                    <section hidden id="login_section_password">
+                        <label for="login_password">Password</label>
+                        <input type="password" id="login_password" autocomplete="current-password">
+                    </section>
+                    <section hidden id="login_section_webauthn">
+                        <a href="#" class="navlink" onclick="Auth.webAuthnLogin(); event.preventDefault()">Login with WebAuthn / Passkey</a>
+                    </section>
                 </fieldset>
                 <button>Continue</button>
 
@@ -103,6 +111,8 @@
             </dl>
 
             <button onclick="Auth.logout()">Log out</button>
+
+            <button onclick="Auth.addWebAuthn()">Add Authenticator / Passkey </button>
         </section>
     </main>
 </body>
